! updated plugin & build info ! changed open mode to check input and editor id

--- a/javahexeditor/build.properties
+++ b/javahexeditor/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                icons/,\
                plugin.xml,\
                toc.xml,\
-               schema/
+               schema/,\
+               userGuide.html
 src.includes = .classpath,\
                .project,\
                META-INF/,\
