Project renamed and version raised to 0.4.0 for update site.

--- a/javahexeditor/.project
+++ b/javahexeditor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javahexeditor</name>
+	<name>net.sourceforge.javahexeditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
