--- a/trunk/javahexeditor/build.properties
+++ b/trunk/javahexeditor/build.properties
@@ -1,8 +1,14 @@
-jars.compile.order = 
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               bin/,\
                icons/,\
                plugin.xml,\
+               COPYING,\
+               ReleaseNotes.txt,\
+               golinux,\
+               gowin32.bat,\
+               safemode.bat,\
+               .,\
                toc.xml,\
                schema/,\
                userGuide.html
@@ -16,7 +22,6 @@ src.includes = .classpath,\
                icons/,\
                launcher.cc,\
                link.sh,\
-               net/,\
                plugin.xml,\
                schema/,\
                src/,\
