--- a/javahexeditor.feature/build.properties
+++ b/javahexeditor.feature/build.properties
@@ -1,4 +1,5 @@
 bin.includes = feature.xml
 src.includes = feature.xml,\
                build.properties,\
-               .project
+               .project,\
+               compile.net.sourceforge.javahexeditor.feature.xml
