--- a/javahexeditor/build.properties
+++ b/javahexeditor/build.properties
@@ -1,29 +1,16 @@
-source.. = src/
+source.. = src/,\
+           test/
 output.. = bin/
 bin.includes = META-INF/,\
                icons/,\
                plugin.xml,\
                COPYING,\
                ReleaseNotes.txt,\
-               golinux,\
-               gowin32.bat,\
-               safemode.bat,\
                .,\
                toc.xml,\
                schema/,\
-               userGuide.html
-src.includes = .classpath,\
-               .project,\
-               META-INF/,\
-               build.properties,\
-               buildnonnative.sh,\
-               compc.sh,\
-               compres.sh,\
-               icons/,\
-               launcher.cc,\
-               link.sh,\
-               plugin.xml,\
+               src/userGuide.html
+src.includes = icons/,\
                schema/,\
-               src/,\
                toc.xml,\
-               userGuide.html
+               src/userGuide.html
