--- a/javahexeditor/build.properties
+++ b/javahexeditor/build.properties
@@ -9,7 +9,8 @@ bin.includes = META-INF/,\
                .,\
                toc.xml,\
                schema/,\
-               src/userGuide.html
+               src/userGuide.html,\
+               plugin.properties
 src.includes = icons/,\
                schema/,\
                toc.xml,\
