--- a/trunk/javahexeditor.updatesite/.project
+++ b/trunk/javahexeditor.updatesite/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>net.sourceforge.javahexeditor.updatesite</name>
+	<name>net.sourceforge.javahexeditor.site</name>
 	<comment></comment>
 	<projects>
 	</projects>
