--- a/javahexeditor/plugin.xml
+++ b/javahexeditor/plugin.xml
@@ -11,7 +11,7 @@
             class="net.sourceforge.javahexeditor.plugin.editors.HexEditor"
             contributorClass="net.sourceforge.javahexeditor.plugin.editors.HexEditorActionBarContributor"
             extensions="a,bin,cab,class,com,dat,data,drv,dll,exe,hex,iso,jar,lib,o,out,part,pdf,png,ram,res,rom,sys,txt,zip"
-            icon="icons/hex.png"
+            icon="icons/hex-16x16.png"
             id="net.sourceforge.javahexeditor"
             name="Hex Editor">
          <contentTypeBinding
@@ -32,7 +32,7 @@
          name="javahexeditorHelpExtensionName"
          point="org.eclipse.help.toc">
       <toc
-            file="toc.xml"
+            file="doc/toc.xml"
             primary="true"/>
    </extension>
    <extension
@@ -44,7 +44,7 @@
          <action
                class="net.sourceforge.javahexeditor.plugin.actions.FileOpenAction"
                enablesFor="+"
-               icon="icons/hex.png"
+               icon="icons/hex-16x16.png"
                id="javahexeditor.fileopen.menu"
                label="Open with Hex Editor"
                menubarPath="additions"
