--- a/trunk/javahexeditor/build.properties
+++ b/trunk/javahexeditor/build.properties
@@ -4,14 +4,24 @@ output.. = bin/
 bin.includes = META-INF/,\
                icons/,\
                plugin.xml,\
-               COPYING,\
-               ReleaseNotes.txt,\
+               doc/COPYING.txt,\
+               doc/RELEASE.txt,\
                .,\
-               toc.xml,\
+               doc/toc.xml,\
                schema/,\
                src/userGuide.html,\
                plugin.properties
 src.includes = icons/,\
                schema/,\
-               toc.xml,\
-               src/userGuide.html
+               doc/toc.xml,\
+               src/userGuide.html,\
+               test/,\
+               plugin.xml,\
+               plugin.properties,\
+               build.properties,\
+               bak/,\
+               doc/RELEASE.txt,\
+               META-INF/,\
+               doc/COPYING.txt,\
+               .project,\
+               .classpath
