--- a/trunk/javahexeditor/build.properties
+++ b/trunk/javahexeditor/build.properties
@@ -4,24 +4,16 @@ output.. = bin/
 bin.includes = META-INF/,\
                icons/,\
                plugin.xml,\
-               doc/COPYING.txt,\
-               doc/RELEASE.txt,\
                .,\
                doc/toc.xml,\
                schema/,\
-               src/userGuide.html,\
+               src/help/javahexeditor.html,\
                plugin.properties
 src.includes = icons/,\
                schema/,\
                doc/toc.xml,\
-               src/userGuide.html,\
-               test/,\
-               plugin.xml,\
-               plugin.properties,\
-               build.properties,\
-               bak/,\
+               src/help/javahexeditor.html,\
                doc/RELEASE.txt,\
-               META-INF/,\
-               doc/COPYING.txt,\
-               .project,\
-               .classpath
+               doc/COPYING.txt
+bin.excludes = icons/msg-6369-0-11623300-1413094863.png,\
+               icons/msg-6369-0-31327100-1413219034.png
