--- a/trunk/javahexeditor/build.properties
+++ b/trunk/javahexeditor/build.properties
@@ -2,18 +2,11 @@ source.. = src/,\
            test/
 output.. = bin/
 bin.includes = META-INF/,\
-               icons/,\
                plugin.xml,\
                .,\
                doc/toc.xml,\
                schema/,\
-               src/help/javahexeditor.html,\
-               plugin.properties
-src.includes = icons/,\
-               schema/,\
-               doc/toc.xml,\
-               src/help/javahexeditor.html,\
-               doc/RELEASE.txt,\
-               doc/COPYING.txt
-bin.excludes = icons/msg-6369-0-11623300-1413094863.png,\
-               icons/msg-6369-0-31327100-1413219034.png
+               plugin.properties,\
+               plugin_de.properties,\
+               about.ini
+
