Fixed deployment issues with icon
Signed-off-by: Andrey Loskutov <loskutov@gmx.de>

--- a/javahexeditor/build.properties
+++ b/javahexeditor/build.properties
@@ -8,5 +8,6 @@ bin.includes = META-INF/,\
                schema/,\
                plugin.properties,\
                plugin_de.properties,\
-               about.ini
+               about.ini,\
+               icons/
 
